--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -2,17 +2,17 @@ FROM eclipse-temurin:21-jdk-alpine AS builder
 
 WORKDIR /app
 
-COPY ./gradlew .
+COPY broadcast_backend/gradlew .
 
-COPY ./gradlew.bat .
+COPY broadcast_backend/gradlew.bat .
 
-COPY ./gradle ./gradle
+COPY broadcast_backend/gradle ./gradle
 
-COPY ./build.gradle.kts .
+COPY broadcast_backend/build.gradle.kts .
 
-COPY ./settings.gradle.kts .
+COPY broadcast_backend/settings.gradle.kts .
 
-COPY ./src ./src
+COPY broadcast_backend/src ./src
 
 RUN apk add --no-cache bash
 
