update new scraping method

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ SILVER_API_URL=https://ub-silver.gcap.co.th/api/slv/silver/v2/price/histories/?P
 SPRING_DATASOURCE_URL="jdbc:sqlserver://192.168.10.42;databaseName=broadcast_gold;encrypt=false" # Database URL
 SPRING_DATASOURCE_USERNAME=surachai # Database Username
 SPRING_DATASOURCE_PASSWORD="@Gcap266" # Database Password
-ASSNPRICE_WEB_URL="https://www.goldtraders.or.th/default.aspx" # AssnPrice web URL
+ASSNPRICE_WEB_URL="https://www.goldtraders.or.th" # AssnPrice web URL
 SERVER_PORT=8080 # Backend Server Port
 ALLOWED_ORIGINS="http://localhost:5173,http://192.168.2.135:5173" # Allowed Origins for CORS
